Day two solved